# triage_medical

./: .env.demo.example  .env.example  .env.mlflow.example  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  README_data.md  docker-compose.yml  download_raw_data.sh  prompts.md  pyproject.toml  pyrightconfig.json  sample_symptoms.md  sft_iter.md
.github/workflows/: cd.yml  ci.yml
configs/: datasets.yaml  dpo.yaml  dpo_v2.yaml  dpo_v4.yaml  sft.yaml
data/: LINEAGE.md  explore.duckdb
docker/mlflow/: Dockerfile  docker-compose.demo.yml  docker-compose.dev.yml  start.sh
infra/: .gitignore  Makefile  README.md  README_MODEL.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
infra/modules/cloudrun/: main.tf  outputs.tf  variables.tf
infra/modules/cloudrun_api/: main.tf  outputs.tf  variables.tf
infra/modules/cloudsql/: main.tf  outputs.tf  variables.tf
infra/modules/vllm_gce/: main.tf  outputs.tf  variables.tf
prez/: presentation.md
scripts/: 01_download.py  02_build_sft.py  03_build_dpo.py  04_anonymize.py  05_split_and_validate.py  explore_data.py  utils.py
scripts/data_prep/: 01_download.py  02_build_sft.py  03_build_dpo.py  03b_sft_errors.py  04_anonymize.py  05_split_and_validate.py  06_push_to_hub.py
scripts/serving/: __init__.py  app.py  benchmark.py  config.py  models.py
scripts/training/: 10_prepare_tokenizer.py  11_train_sft.py  12_evaluate_sft.py  20_train_dpo.py  21_evaluate_dpo.py  22_export_model.py
tests/: test_serving.py
