[project]
name = "project14"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]
