[project]
name = "project14"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    # S1 — Data Engineering
    "datasets>=2.19",
    "huggingface-hub>=0.23",
    "pandas>=2.2",
    "pyarrow>=16.0",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "spacy>=3.7",
    "scikit-learn>=1.4",
    "tqdm>=4.66",
    "ipykernel>=7.2.0",
    "jupyter-client>=8.8.0",
    # S2 — SFT / Fine-tuning
    "torch>=2.2",
    "transformers>=4.41",
    "peft>=0.11",
    "trl>=0.9",
    "accelerate>=0.30",
    "bitsandbytes>=0.43",
    "mlflow>=2.13",
    "duckdb>=1.5.0",
    "pynvml>=13.0.1",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long — handled by formatter
    "E402", # module-level import not at top of file — intentional in scripts using sys.path.insert()
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
